--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,43 +4,50 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CatProject"
-        android:fullBackupContent="true"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:theme="@style/Theme.CatProject">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCng8nw_0TrAPMtiTSJPCa3vmg-As4YbY4"/>
+            android:value="AIzaSyCng8nw_0TrAPMtiTSJPCa3vmg-As4YbY4" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:host="catproject.page.link" android:scheme="https"/>
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="catproject.page.link"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
-<!--        <activity android:name=".MainActivity">
+        <!--
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>-->
+        </activity>
+        -->
         <activity android:name=".showMap" />
         <activity android:name=".showCatInfo" />
+        <activity android:name=".showAlbum" />
     </application>
 
 </manifest>
