1. showInfo: 탭 디자인 수정 2. showInfo: 사진 넘기기 버튼 오류 수정 2. showInfo: 정보 수정 버튼 작동 > 액티비티 팝업. 갤러리에서 사진 추가 및 업로드 가능
다음 목표:
1. 동적 생성 뷰에 아이디 넣어줘서 클릭 이벤트 만들기
2. 정보 등록 시 현재 위치(위도 경도)로 마커 만들기
3. 고객센터 탭(메일 보내기)
4. 사용자 별 api
등등

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,18 +36,10 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
-        <!--
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        -->
         <activity android:name=".showMap" />
         <activity android:name=".showCatInfo" />
         <activity android:name=".showAlbum" />
+        <activity android:name=".editInfo" android:theme="@android:style/Theme.Dialog" />
     </application>
 
 </manifest>
